--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "@fortawesome/free-solid-svg-icons": "^6.7.2",
     "@reduxjs/toolkit": "^2.8.2",
     "@tailwindcss/vite": "^4.1.7",
+    "@types/jwt-decode": "^2.2.1",
     "axios": "^1.10.0",
+    "jwt-decode": "^4.0.0",
     "npm-execute": "^0.9.10",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
